add model selection
